Added a bit more analysis

--- a/models/baseline_model.ipynb
+++ b/models/baseline_model.ipynb
@@ -1419,7 +1419,9 @@
     "**Notes** \n",
     "- Need better features to be able to pick up underdog wins\n",
     "\n",
-    "- Including the odds as a feature might sway the model too much. Should look into including an indicator to represent which team is the favorite instead?\n"
+    "- Including the odds as a feature might sway the model too much. Should look into including an indicator to represent which team is the favorite instead?\n",
+    "\n",
+    "- It is relatively easy to identify the favorite in a game (even without vegas odds), so the key to making a good model lies in being able to accurately predict games where the underdog wins or the odds are very close"
    ]
   },
   {
